fix conflicts salt-db and refresh token
