# docs/swagger.yaml
@@ -12,6 +12,13 @@ definitions:
           $ref: '#/definitions/model.NotesList'
         type: array
     type: object
+  handler.refreshInput:
+    properties:
+      refresh_token:
+        type: string
+    required:
+    - refresh_token
+    type: object
   handler.signInInput:
     properties:
       password:
@@ -25,6 +32,29 @@ definitions:
   handler.statusResponse:
     properties:
       status:
+        type: string
+    type: object
+  handler.tokenResponse:
+    properties:
+      access_token:
+        type: string
+      refresh_token:
+        type: string
+    type: object
+  model.ItemInput:
+    properties:
+      description:
+        type: string
+      done:
+        type: boolean
+      title:
+        type: string
+    type: object
+  model.ListInput:
+    properties:
+      description:
+        type: string
+      title:
         type: string
     type: object
   model.ListItem:
@@ -60,22 +90,6 @@ definitions:
     required:
     - title
     type: object
-  model.UpdateItemInput:
-    properties:
-      description:
-        type: string
-      done:
-        type: boolean
-      title:
-        type: string
-    type: object
-  model.UpdateListInput:
-    properties:
-      description:
-        type: string
-      title:
-        type: string
-    type: object
   model.User:
     properties:
       name:
@@ -96,17 +110,100 @@ info:
   title: Notes API
   version: "1.0"
 paths:
-  /api/items/:id:
+  /api/items/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: delete items by id
+      operationId: delete-items-by-id
+      parameters:
+      - description: Item id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.statusResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete Item By Id
+      tags:
+      - items
+    get:
+      consumes:
+      - application/json
+      description: get item by id
+      operationId: get-item-by-id
+      parameters:
+      - description: Item id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.NoteItem'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get Item By Id
+      tags:
+      - items
     put:
       description: update Item by id
       operationId: update-item-by-id
       parameters:
+      - description: Item id
+        in: path
+        name: id
+        required: true
+        type: string
       - description: list info
         in: body
         name: input
         required: true
         schema:
-          $ref: '#/definitions/model.UpdateItemInput'
+          $ref: '#/definitions/model.ItemInput'
       produces:
       - application/json
       responses:
@@ -178,7 +275,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/model.NotesList'
+          $ref: '#/definitions/model.ListInput'
       produces:
       - application/json
       responses:
@@ -207,17 +304,100 @@ paths:
       summary: Create Notes list
       tags:
       - lists
-  /api/lists/:id:
+  /api/lists/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: delete list by id
+      operationId: delete-list-by-id
+      parameters:
+      - description: List id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.statusResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete List By Id
+      tags:
+      - lists
+    get:
+      consumes:
+      - application/json
+      description: get list by id
+      operationId: get-list-by-id
+      parameters:
+      - description: List id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.ListItem'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get List By Id
+      tags:
+      - lists
     put:
       description: update Note list by id
       operationId: update-list-by-id
       parameters:
+      - description: List id
+        in: path
+        name: id
+        required: true
+        type: string
       - description: list info
         in: body
         name: input
         required: true
         schema:
-          $ref: '#/definitions/model.UpdateListInput'
+          $ref: '#/definitions/model.ListInput'
       produces:
       - application/json
       responses:
@@ -246,10 +426,16 @@ paths:
       summary: Update Note list by id
       tags:
       - lists
-  /api/lists/:id/items:
+  /api/lists/{id}/items:
     get:
       description: get Item list
       operationId: get-item
+      parameters:
+      - description: List id
+        in: path
+        name: id
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -282,12 +468,17 @@ paths:
       description: create Item list
       operationId: create-item
       parameters:
+      - description: List id
+        in: path
+        name: id
+        required: true
+        type: string
       - description: list info
         in: body
         name: input
         required: true
         schema:
-          $ref: '#/definitions/model.NoteItem'
+          $ref: '#/definitions/model.ItemInput'
       produces:
       - application/json
       responses:
@@ -316,6 +507,45 @@ paths:
       summary: Create Item list
       tags:
       - items
+  /auth/refresh:
+    post:
+      consumes:
+      - application/json
+      description: refresh token
+      operationId: refresh
+      parameters:
+      - description: credentials
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/handler.refreshInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: token
+          schema:
+            $ref: '#/definitions/handler.tokenResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: Refresh
+      tags:
+      - auth
   /auth/sign-in:
     post:
       consumes:
@@ -335,7 +565,7 @@ paths:
         "200":
           description: token
           schema:
-            type: string
+            $ref: '#/definitions/handler.tokenResponse'
         "400":
           description: Bad Request
           schema:
